fix(ui): Remove condensed letter spacing on headlines.
Looks pretty bad on smaller screens.


Former-commit-id: ae16911d50177361bcaa7f511776ad72c6f0a387

--- a/ui/styles/modules/_typo.scss
+++ b/ui/styles/modules/_typo.scss
@@ -16,7 +16,6 @@ a, a > span {
 
 h1,h2,h3,h4,h5,h6 {
   font-family: 'Circular';
-  letter-spacing: -0.5;
   font-weight: 700;
 }
 
